# minizinc-python

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  CHANGELOG.rst  CITATION.cff  Pipfile  README.md  flake.nix  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql.yml  python-package.yml  python-publish.yml
docs/: advanced_usage.rst  api.rst  basic_usage.rst  changelog.rst  conf.py  getting_started.rst  index.rst  library_structure.rst  requirements.txt
docs/examples/: nqueens.mzn  nqueens.py  output_type.py  show_queens.py  solver_race.py
docs/source/: conf.py  index.rst
minizinc/: __init__.py  driver.py  internal.py  model.py  result.py  solver.py  support.py
minizinc/API/: driver.py
minizinc/CLI/: driver.py
src/minizinc/: __init__.py  analyse.py  diversity.py  driver.py  dzn.py  dzn_parser.py  error.py  helpers.py  instance.py  json.py  model.py  pygments.py  result.py  solver.py  types.py
src/minizinc/API/: __init__.py  driver.py  instance.py  solver.py
src/minizinc/CLI/: __init__.py  driver.py  instance.py  solver.py
src/minizinc/share/minizinc-python/: diversity.mzn
tests/: Dockerfile  build_docker.sh  support.py  test_case.py  test_dzn.py  test_errors.py  test_helpers.py  test_init.py  test_instance.py  test_solver.py  test_solving.py  test_types.py
