[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ['py36', 'py37', 'py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.poetry]
name = "minizinc"
version = "0.2.1"
description = "Access MiniZinc directly from Python"
readme = "README.md"
authors = ["Jip J. Dekker <jip@dekker.one>"]
license = "MPL-2.0"
homepage = "https://www.minizinc.org/"
documentation = "https://minizinc-python.readthedocs.io"
repository = "https://gitlab.com/minizinc/minizinc-python"
classifiers=[
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
dataclasses = {version = "^0.6.0", python = "<3.7"}
lark-parser = "^0.7.5"
pygments = "^2.5"
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
flake8 = "^3.7"
flake8-black = "^0.1.1"
flake8-bugbear = "^19.8"
flake8-mypy = "^17.8"
isort = {version = "^4.3", extras = ["pyproject"]}
pytest = "^5.1"
tox = "^3.14"

[tool.poetry.plugins."pygments.lexers"]
minizinclexer = "minizinc.pygments:MiniZincLexer"
